# bbs-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_building_and_making  compile_and_clean  do_compile_and_clean.sh  make_compiling_and_cleaning  nextcommit  server.c
base/: accounts  screen
client/: CMakeLists.txt  cmake_building_and_making  make_compiling_and_cleaning
client/headers/: client.h  typedefs.h
client/src/: client.c
config/: server.conf
headers/: OTHER_DEPENDENCIES_LIST  connections.h  pollfd_control.h  recv_send_state_logic.h  server.h  server_config.h  signal_handler.h  start_deamon_process.h  typedefs.h  working_files.h
modules/: connections.c  pollfd_control.c  recv_send_state_logic.c  server_config.c  signal_handler.c  working_files.c
src/: connections.c  pollfd_control.c  recv_send_state_logic.c  server.c  start_deamon_process.c  working_files.c
